# lipm_walking_controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.patch  patch.patch  patch_camera_sensor_server.patch  variable_stiffness.patch
camera/: CMakeLists.txt  example.hpp  extract_and_convert_to_csv.py  ground_estimation.cpp  ground_estimation_2.cpp  re-process_bin.py  re_export_log.cpp  test_0.cpp  test_1.cpp
doc/: build.dox
etc/: D405_EdgeMapD435.JSON  D405_ShortRangePreset.JSON  LIPMWalking.in.yaml  LIPMWalking.in_old.yaml  LIPMWalkingSoftFoot.in.yaml
include/lipm_walking/: Contact.h  Controller.h  FootstepPlan.h  PlanInterpolator.h  SwingTraj.h
include/lipm_walking/observer/: CameraSensor.h  CameraSensorShared.h  RangeSensor.h
include/lipm_walking/swing/: SwingTrajCubicSplineSimple.h  SwingTrajLandingSearch.h
nano/: CMakeLists.txt  calibration.cpp  serial.cc  test_0.cpp  test_1.cpp  test_2.cpp  test_3.cpp  unix.cc
nano/ino/: dual_VL53L1X.ino  mono_VL53L1X_new.ino  range_sensor.ino
nano/ino/test_0.ino/: test_0.ino.ino
scripts/: X.csv  classificationKNN.py  filter.py  profile.csv  profileToStiffness.py  testData.csv  tot.csv  trainData.csv  y.csv
src/: CMakeLists.txt  Controller.cpp  FootstepPlan.cpp  RobotUtils.cpp  lib.cpp
src/observer/: CameraSensor.cpp  CameraSensorCeresFunctions.h  CameraSensorResetShm.cpp  CameraSensorServer.cpp  CameraSensorServer.h  CameraSensorShared.cpp  RangeSensor.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  Initial.cpp  Initial.h  SingleSupport.cpp  SingleSupport.h  SoftFootState.cpp  SoftFootState.h  Standing.cpp  Standing.h
src/states/data/: states.yaml
src/swing/: SwingTrajCubicSplineSimple.cpp  SwingTrajLandingSearch.cpp
